hadra-lang/src/test/resources/net/vpc/hadralang/test/compiler/fail/testCompilerFail0043.hl
//IllegalArgumentException already handled by RuntimeException
 int x3=try(c=connexion) int("one")
        catch(IOException|RuntimeException x) 2
        catch(IllegalArgumentException) 3;